K8s/original/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd:
      C:\Users\Javier\Google Drive\dev\docker\microservice\kompose-windows-amd64.exe
      convert -f .\stack.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd:
          C:\Users\Javier\Google Drive\dev\docker\microservice\kompose-windows-amd64.exe
          convert -f .\stack.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/backend: "true"
        io.kompose.service: db
    spec:
      containers:
        - args:
            - --default-authentication-plugin=mysql_native_password
          image: mysql
          imagePullPolicy: ""
          name: db
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/notsql
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pv-claim
status: {}
