K8s/original/db-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
spec:
  containers:
    - name: db
      image: mysql
      volumeMounts:
        - mountPath: /var/lib/sql
          name: sql-volume
      args:
        - --default-authentication-plugin=mysql_native_password
  volumes:
    - name: sql-volume
      hostPath:
        path: /C/temp/data
        type: Directory
