K8s/original/ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd:
      C:\Users\Javier\Google Drive\dev\docker\microservice\kompose-windows-amd64.exe
      convert -f .\stack.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: ui
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd:
          C:\Users\Javier\Google Drive\dev\docker\microservice\kompose-windows-amd64.exe
          convert -f .\stack.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.network/frontend: "true"
        io.kompose.service: ui
    spec:
      containers:
        - image: checklist-ui:prod
          imagePullPolicy: ""
          name: ui
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
