K8s/original/adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd:
      C:\Users\Javier\Google Drive\dev\docker\microservice\kompose-windows-amd64.exe
      convert -f .\stack.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: adminer
  name: adminer
spec:
  type: LoadBalancer
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: adminer
status:
  loadBalancer: {}
