K8s/original/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd:
      C:\Users\Javier\Google Drive\dev\docker\microservice\kompose-windows-amd64.exe
      convert -f .\stack.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: ui
  name: ui
spec:
  type: LoadBalancer
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: ui
status:
  loadBalancer: {}
